--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -13,20 +13,21 @@
             <ion-label position="floating">Correo Electrónico</ion-label>
             <ion-input formControlName="email" type="email" required></ion-input>
           </ion-item>
+          <ion-item>
+            <ion-label position="floating">Nombre de Usuario</ion-label>
+            <ion-input formControlName="username" type="text" required></ion-input>
+          </ion-item>
           <ion-button expand="full" type="submit" [disabled]="!resetPasswordForm.valid">
             Enviar Solicitud
           </ion-button>
         </form>
-
-        <!-- Mensaje de éxito o error -->
-        <ion-item *ngIf="passwordResetSuccess" class="mt-3">
-          <ion-label color="success">Te hemos enviado un correo para restablecer tu contraseña.</ion-label>
+        <ion-item *ngIf="storedPassword" class="mt-3">
+          <ion-label>Contraseña Recuperada:</ion-label>
+          <ion-input [value]="storedPassword" readonly></ion-input>
         </ion-item>
-
-        <ion-item *ngIf="passwordResetError" class="mt-3">
-          <ion-label color="danger">No se pudo enviar el correo. Intenta nuevamente.</ion-label>
+        <ion-item *ngIf="!storedPassword" class="mt-3">
+          <ion-label color="danger">No se encontró una contraseña para este usuario.</ion-label>
         </ion-item>
-        
       </ion-col>
     </ion-row>
   </ion-grid>
