--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,24 +1,28 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Iniciar Sesión</ion-title>
+  <ion-toolbar class="ion-padding">
+    <h1>RegistrAPP</h1>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content> 
+  <ion-img class="ion-margin-top" src="assets/images/login1.svg"></ion-img>
   <ion-grid>
     <ion-row>
       <ion-col>
         <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
           <ion-item>
-            <ion-label position="floating">Correo Electrónico</ion-label>
+            <ion-label class="ion-margin-top" position="floating">Mail <ion-icon name="mail"></ion-icon></ion-label>
+            
             <ion-input formControlName="email" type="email"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="floating">Nombre de Usuario</ion-label>
+           
+            <ion-label position="floating"> Usuario  <ion-icon name="person"></ion-icon> </ion-label> 
             <ion-input formControlName="username" type="text"></ion-input>
+           
           </ion-item>
           <ion-item>
-            <ion-label position="floating">Contraseña</ion-label>
+            <ion-label position="floating"> Contraseña  <ion-icon name="key"></ion-icon></ion-label>
             <ion-input formControlName="password" type="password"></ion-input>
           </ion-item>
           <ion-button expand="full" type="submit" [disabled]="!loginForm.valid">
