cambios css login, home, e404.

--- a/src/app/page/e404/e404.page.html
+++ b/src/app/page/e404/e404.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Página no encontrada </ion-title>
+  <ion-toolbar class="ion-padding morado">
+    <h1>Página no encontrada </h1>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-img src="assets/images/e404.svg"></ion-img> 
 
-  <ion-button routerLink="/login" expand="full" >Volver Al Login</ion-button>
+  <ion-button class="morado" routerLink="/login" expand="full" >Volver Al Login</ion-button>
 </ion-content>
 
