--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,7 @@
 <ion-header>
-  <ion-toolbar class="ion-padding">
+  <ion-toolbar class="ion-padding morado">
     <h1>RegistrAPP</h1>
+    <h3>          ¡Bienvenido {{ userName }}!</h3>
     <ion-buttons slot="end">
       <ion-button [routerLink]="['/perfil']">
         <ion-icon name="person-circle-outline"></ion-icon>
@@ -12,11 +13,10 @@
 </ion-header>
 
 <ion-content>
+  <ion-img class="ion-margin-top" src="assets/images/home3.svg"></ion-img>
   <ion-grid>
     <ion-row>
       <ion-col>
-        <h1 class="ion-padding">¡Bienvenido {{ userName }}!</h1>
-        <ion-img class="ion-margin-top" src="assets/images/home.svg"></ion-img>
 
         <ion-card>
           <ion-card-header>
@@ -62,12 +62,12 @@
         </ion-card>
 
         <!-- Botón para escanear el código QR -->
-        <ion-button expand="full" (click)="scan()">Escanear Código QR</ion-button>
+        <ion-button class="morado" expand="full" (click)="scan()">Escanear Código QR</ion-button>
 
         <!-- Mostrar el resultado del escaneo -->
         <p *ngIf="result">Resultado del escaneo: {{ result }}</p>
 
-        <ion-button expand="full" (click)="handleLogout()">Cerrar sesión</ion-button>
+        <ion-button class="morado" expand="full" (click)="handleLogout()">Cerrar sesión</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
