--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ion-padding">
+  <ion-toolbar class="ion-padding morado">
     <h1>RegistrAPP</h1>
   </ion-toolbar>
 </ion-header>
@@ -25,10 +25,10 @@
             <ion-label position="floating"> Contraseña  <ion-icon name="key"></ion-icon></ion-label>
             <ion-input formControlName="password" type="password"></ion-input>
           </ion-item>
-          <ion-button expand="full" type="submit" [disabled]="!loginForm.valid">
+          <ion-button class="morado" expand="full" type="submit" [disabled]="!loginForm.valid">
             Iniciar Sesión
           </ion-button>
-          <ion-button expand="full" (click)="navigateToResetPassword()">
+          <ion-button class="morado" expand="full" (click)="navigateToResetPassword()">
             Olvidé mi Contraseña
           </ion-button>
         </form>
