--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,7 @@
       <ion-col>
         <h1>¡Bienvenido {{ userName }}!</h1>
 
+        <!-- Lista de asignaturas -->
         <ion-card>
           <ion-card-header>
             <ion-card-title>Asignaturas Disponibles:</ion-card-title>
@@ -29,16 +30,17 @@
                   <p *ngIf="subject.registered">
                     Asistencia registrada: {{ subject.registered | date: 'shortTime' }}
                   </p>
+                  <p *ngIf="!subject.registered">No registrado</p>
                 </ion-label>
                 <ion-button slot="end" [disabled]="subject.registered">
-                  Asistencia Registrada
+                  {{ subject.registered ? 'Registrado' : 'Registrar' }}
                 </ion-button>
               </ion-item>
             </ion-list>
           </ion-card-content>
         </ion-card>
 
-        <!-- Tarjeta de Clima -->
+        <!-- Tarjeta de clima -->
         <ion-card *ngIf="weatherData">
           <ion-card-header>
             <ion-card-title>Clima en {{ weatherData.name }}</ion-card-title>
@@ -66,6 +68,7 @@
         <!-- Mostrar el resultado del escaneo -->
         <p *ngIf="result">Resultado del escaneo: {{ result }}</p>
 
+        <!-- Botón para cerrar sesión -->
         <ion-button expand="full" (click)="handleLogout()">Cerrar sesión</ion-button>
       </ion-col>
     </ion-row>
